@@ -26,7 +26,7 @@ need to build OpenGFX.
 make %{?_smp_mflags}
 
 %install
-make install DESTDIR=%{buildroot}
+make install DESTDIR=%{buildroot} prefix=%{_prefix}
 
 %clean
 
