@@ -5,11 +5,6 @@
 # Copy this file to Makefile.local (if make didn't do it for you)
 # and edit to modify the settings
 
-# Optional parts of GRFCodec are dependent on boost::date_time
-# If you do not have boost, make should detect this, and compile a version
-# of grfcodec that does not include the boost-dependent parts.
-# Get boost from www.boost.org
-#
 # If the boost folder auto-detection fails, set your boost include folder here.
 # If boost can be found in your standard include search paths, setting this to
 # any non-empty value will cause make to assume that boost is present.
@@ -19,14 +14,10 @@
 #SHELL = /bin/sh
 #CXX = g++
 #STRIP = strip
+#UPX = upx
 #AWK = awk
 #SRCZIP_FLAGS = -9
 #SRCZIP = gzip
-
-# If you want to UPX compress the binaries (default)
-#UPX = upx
-# If you do not want to UPX compress the binaries
-#UPX =
 
 # use 386 instructions but optimize for pentium II/III
 #CXXFLAGS = -g -DWIN32 -O1 $(BOOST_INCLUDE) -Wall -Wno-uninitialized $(CFLAGAPP)
@@ -47,7 +38,8 @@
 # (Required to compile with Cygwin's gcc 4)
 #NOCYGWIN = 0
 
-# Installation directories
-#INSTALL_DOCS_DIR := "$(DESTDIR)/usr/share/doc/grfcodec"
-#INSTALL_BINARY_DIR := "$(DESTDIR)/usr/bin"
-#INSTALL_MAN_DIR := "$(DESTDIR)/usr/share/man/man1"
+# Several options to influence the installation of documentation
+#DO_NOT_INSTALL_DOCS = 1
+#DO_NOT_INSTALL_CHANGELOG = 1
+#DO_NOT_INSTALL_LICENSE = 1
+#DO_NOT_INSTALL_MAN = 1
